  -  Minor issue with PHP Heredoc and Nowdoc syntax sometimes not getting highlighted (BenBE)
  -  Fixed economy mode for GeSHi::get_stylesheet() - now it just makes so much more sense! (milian)
  -  Fixed Economy Mode when COMMENT_REGEXP are used (BenBE)
  -  Some typos and mistakes in the documentation (BenBE)
  -  Added new GESHI_HEADER_PRE_VALID type which uses the following markup:
     * With line numbers:     <div>header<ol><li><pre>...</pre></li>...</ol></div>
     * Without line numbers:  <pre>header...CODE...</pre>
     => valid HTML and no need for &nbsp; indentation
  -  Extended support for number formats now covering the most common formats (SF#1923058, BenBE)
  -  Updated Objective-C language file (SF#2013961, Quinn Taylor, BenBE)
  -  Added some keywords for VHDL (beshig, BenBE)
  -  Fixed severly broken ColdFusion language file (milian)
  -  Make sure strict_mode is set properly when doing repeated set_language calls (milian)
  -  Fixed some incorrectly highlighted things with the CSS language file (milian, BenBE)
  -  Fixed broken use with Suhosin Patch when /e modifier was disabled (SF#2021800, BenBE)
  -  Removed some private methods which were only called at exactly one place (milian)
     * format_header_content
     * format_footer_content
     * get_attributes
  -  Improved smarty language file (milian)
  -  Fixed a regular expression in mIRC language file that caused a warning message to be issued (BenBE)
  -  Added a script to contrib/ to verify language files are correct (BenBE)
  -  Fixed loads of compliancy warnings detected with an automated compliance testing script (BenBE)
  -  Second part of default style changes. Affected in this release:
     * C++
     * C++ (QT)
     * CSS
     * VHDL
Version 1.0.7.22
  -  Added language files
     * glSlang (BenBE)
     * KiXtart (Riley McArdle)
     * Lotus Notes @Formulas (Richard Civil)
     * LotusScript (Richard Civil)
     * MXML (David Spurr)
     * Scala (Franco Lombardo)